--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.4.0",
+    "dexie": "^4.0.8",
+    "dexie-react-hooks": "^1.1.7",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.356.0",
     "next": "14.1.3",
