feat: implement backup and restore functionality
- Add comprehensive backup/restore system for editor data
- Export all tabs to JSON backup file with metadata
- Import backup with merge/replace strategies and conflict handling
- Place backup controls alongside settings in header area
- Add extensive validation and error handling
- Include comprehensive test suite with 13 passing tests
- Support data migration between browsers/devices
- Protect against data loss from cache clearing

Components added:
- lib/backup-restore.ts: Core backup/restore logic
- components/BackupRestoreMenu.tsx: UI component with popover interface
- __tests__/backup-restore.test.ts: Comprehensive test suite
- __tests__/backup-restore-integration.test.ts: Integration tests

Features:
- One-click export with timestamped filenames
- Import dialog with strategy selection (merge/replace)
- File validation (type, size, format, structure)
- User feedback via toast notifications
- Responsive design for mobile and desktop
- Tooltip guidance and clear UI

Closes #2

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "next build",
     "preview": "next build && next start",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "@ducanh2912/next-pwa": "^10.2.7",
